@startuml

class Client {
}
class Director {
    -builder
    +construct()
}
abstract class Builder {
    +{abstract} buildPart1()
    +{abstract} buildPart2()
    +{abstract} buildPart3()
}
class ConcreteBuilder {
    +buildPart1()
    +buildPart2()
    +buildPart3()
    +getResult()
}

Client -> Director : Uses >
Director o-> Builder
Builder <|-- ConcreteBuilder
Client --> ConcreteBuilder : Uses >

@enduml